[package]
name = "boxcar_cluster"
version = "0.1.0"
edition = "2021"
description = "boxcar-rpc"
license = "LGPL-3.0-only"

[dependencies]
etcd-client = "0.8"
boxcar_rpc = { path = "../boxcar-rpc" }
etcdsvc = { path = "../etcdsvc.rs" }
anyhow = "1.0"

tokio = { version = "1.16", features = ["full", "tracing"] }

tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"