[package]
name = "boxcar_rpc"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
quote = "1.0"
async-trait = "0.1"
url = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }

tokio = { version = "1.16", features = ["full"] }
tokio-tungstenite = { version = "0.16"}

futures-core = "0.3"
futures-util = "0.3"
deadqueue = "0.2"